--- a/style.css
+++ b/style.css
@@ -6,3 +6,54 @@ h1 {
 h2 {
 	font-size: 1.5em;
 }
+
+#card-preview-title-container {
+	padding-left: 0.1in;
+	padding-right: 0.1in;
+	padding-top: 0.1in;
+}
+
+#card-preview-notes {
+	font-size: 0.1in;
+}
+
+#card-preview-power-toughness {
+	padding: 0.05in;
+	margin: 0.05in 0;
+	border: 1px solid black;
+	border-radius: 0.1in;
+}
+
+.card-container {
+	width: 2.5in;
+	height: 3.5in;
+	max-width: 2.5in;
+	max-height: 3.5in;
+	border-radius: 0.125in;
+	border: 1px solid black;
+	font-size: 0.15in;
+}
+
+.card-container > * {
+	padding-left: 0.1in;
+	padding-right: 0.1in;
+}
+
+.card-container h1 {
+	font-size: 0.225in;
+}
+
+.card-title-block {
+	height: 0.5in;
+	background-color: green;
+}
+
+.mana-symbol {
+	width: 0.2in;
+	height: 0.2in;
+}
+
+.mana-symbol-small {
+	width: 0.15in;
+	height: 0.15in;
+}
