--- a/style.css
+++ b/style.css
@@ -7,21 +7,36 @@ h2 {
 	font-size: 1.5em;
 }
 
-#card-preview-title-container {
+.card-title-container {
 	padding-left: 0.1in;
 	padding-right: 0.1in;
 	padding-top: 0.1in;
+
+	display: flex;
+	flex-direction: row;
+	gap: 0.1in;
 }
 
-#card-preview-notes {
+.card-title {
+	flex-grow: 1;
+	font-weight: bold;
+}
+
+.card-mana-cost {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.card-notes {
 	font-size: 0.09in;
 }
 
-#card-preview-cost > * {
+.card-mana-cost > * {
 	margin-left: 0.01in;
 }
 
-#card-preview-power-toughness {
+.card-power-toughness {
 	padding: 0.05in;
 	margin: 0.05in 0;
 	border: 1px solid black;
@@ -36,6 +51,10 @@ h2 {
 	border-radius: 0.125in;
 	border: 1px solid black;
 	font-size: 0.1in;
+	break-inside: avoid;
+
+	display: flex;
+	flex-direction: column;
 }
 
 .card-container > * {
@@ -47,9 +66,38 @@ h2 {
 	font-size: 0.125in;
 }
 
+.card-container .card-divider {
+	border-bottom: 1px solid black;
+	margin-bottom: 0.05in;
+	margin-top: 0.05in;
+}
+
 .card-title-block {
 	height: 0.5in;
 	background-color: green;
+}
+
+.card-oracle-text {
+	display: inline-block;
+	white-space: pre-wrap;
+}
+
+.card-flavor-text {
+	font-style: italic;
+}
+
+.card-type-container {
+	display: flex;
+	flex-direction: row;
+	gap: 0.05in;
+}
+
+.card-type-container p:first-of-type {
+	flex-grow: 1;
+}
+
+.card-container .grow {
+	flex-grow: 1;
 }
 
 .mana-symbol {
