--- a/styles/layout.css
+++ b/styles/layout.css
@@ -47,6 +47,15 @@
 	#tab-bar {
 		display: none;
 	}
+
+	h1 {
+		font-size: 2em;
+		font-weight: bold;
+	}
+
+	h2 {
+		font-size: 1.5em;
+	}
 }
 
 body {
