--- a/styles/ptcg.css
+++ b/styles/ptcg.css
@@ -32,6 +32,14 @@
 	display: flex;
 	flex-direction: row;
 	gap: 0.05in;
+
+	.card-title {
+		gap: 0;
+		.energy-symbol {
+			margin-left: 0.05in;
+			margin-right: 0.05in;
+		}
+	}
 }
 
 .card-evolution-type {
@@ -73,10 +81,8 @@
 
 .card-content {
 	flex-grow: 1;
-
-	p, span {
-		white-space: pre-wrap;
-	}
+	display: inline-block;
+	white-space: pre-wrap;
 }
 
 .card-attack-or-ability {
@@ -128,5 +134,9 @@
 .energy-symbol {
 	height: 1em;
 	width: 1em;
-	margin: auto 0.01in;
+	margin-left: 0.01in;
+	margin-right: 0.01in;
+	/*margin-top: calc(1em * 0.125);*/
+	display: inline-block;
+	vertical-align: sub;
 }
