--- a/styles/mtg.css
+++ b/styles/mtg.css
@@ -6,6 +6,7 @@
 	display: flex;
 	flex-direction: row;
 	gap: 0.1in;
+	font-size: 0.125in;
 }
 
 .card-title {
@@ -61,11 +62,6 @@
 	border-bottom: 1px solid black;
 	margin-bottom: 0.05in;
 	margin-top: 0.05in;
-}
-
-.card-title-block {
-	height: 0.5in;
-	background-color: green;
 }
 
 .card-oracle-text {
