--- a/styles/layout.css
+++ b/styles/layout.css
@@ -67,3 +67,10 @@ body {
 	margin: 0;
 	min-height: 100%;
 }
+
+#preview-all-cards-container {
+	display: flex;
+	flex-direction: row;
+	gap: 0.1in;
+	flex-wrap: wrap;
+}
