--- a/styles/index.css
+++ b/styles/index.css
@@ -72,3 +72,22 @@ body {
 		background-color: oklch(40% 0.24 277.023);
 	}
 }
+
+.links-box {
+	position: fixed;
+	bottom: 20px;
+	right: 10px;
+	width: max-content;
+	height: max-content;
+}
+
+.github-link {
+	background-color: black;
+	color: white;
+	padding: 10px;
+	margin: 10px;
+	border-radius: 10px;
+	text-decoration: none;
+	font-weight: bold;
+	transition: background-color 0.2s;
+}
