--- a/styles/tailwindOut.css
+++ b/styles/tailwindOut.css
@@ -16,10 +16,6 @@
     --text-base--line-height: calc(1.5 / 1);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
-    --text-5xl: 3rem;
-    --text-5xl--line-height: 1;
     --font-weight-bold: 700;
     --radius-md: 0.375rem;
     --default-font-family: var(--font-sans);
@@ -1094,6 +1090,9 @@
       opacity: 20%;
     }
   }
+  .absolute {
+    position: absolute;
+  }
   .tooltip-bottom {
     > .tooltip-content, &[data-tip]:before {
       transform: translateX(-50%) translateY(var(--tt-pos, -0.25rem));
@@ -1315,9 +1314,6 @@
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
   }
-  .mb-10 {
-    margin-bottom: calc(var(--spacing) * 10);
-  }
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
   }
@@ -1443,6 +1439,9 @@
   .w-max {
     width: max-content;
   }
+  .w-screen {
+    width: 100vw;
+  }
   .max-w-1\/5 {
     max-width: calc(1/5 * 100%);
   }
@@ -1451,6 +1450,9 @@
   }
   .max-w-full {
     max-width: 100%;
+  }
+  .min-w-1\/2 {
+    min-width: calc(1/2 * 100%);
   }
   .min-w-1\/3 {
     min-width: calc(1/3 * 100%);
@@ -1546,6 +1548,9 @@
   .bg-base-300 {
     background-color: var(--color-base-300);
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
   .checkbox-xs {
     padding: 0.125rem;
     --size: calc(var(--size-selector, 0.25rem) * 4);
@@ -1565,10 +1570,6 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
-  }
-  .text-5xl {
-    font-size: var(--text-5xl);
-    line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
   .text-xs {
     font-size: var(--text-xs);
